plugin-bazel/src/test/testData/starlark/annotation/EmptyGlobAnnotatorTestData.bzl
java_library(
    name = "myLib",
    my_srcs = <error descr="This glob does not match any files">glob</error>([]),
)
